# roll

./: .gitignore  package-lock.json  package.json  uno.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/components/layout/: SideBar.svelte  TitleBar.svelte
src/lib/config/: sidebar.js
src/lib/ffmpeg/: ffmpeg.svelte.js  ffmpegOptions.js  index.js
src/lib/icons/: Logo.svelte  Uploade.svelte
src/lib/states/: emoji.svelte.js  index.js
src/lib/styles/: global.css
src/lib/transitions/: flyAndScale.js  index.js
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/routes/command-builder/: +page.svelte
src/routes/compress/: +page.svelte
